# gent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  styles.css
.claude/: settings.json
docs/superpowers/: .gitignore
docs/superpowers/plans/: 2026-03-26-execution-engine-plan.md  2026-03-26-variant-nodes.md  2026-03-27-implement-unused-warnings.md  2026-03-27-plugin-system-implementation.md  2026-03-27-trivial-initial-graph.md  2026-03-28-left-panel-plugin-tab-plan.md  2026-03-28-scripting-engine.md  2026-03-30-four-cleanup-fixes.md  2026-03-30-reactive-canvas-resize.md  2026-03-30-remove-rune-wasm-frontend-code.md  2026-03-30-rust-wasm-plugin-invocation.md  2026-03-31-plugin-console-api.md  2026-04-03-llm-node-implementation.md  2026-04-03-model-node-refactor.md  2026-04-04-keyboard-shortcut-integration.md
docs/superpowers/specs/: 2026-03-26-execution-engine-design.md  2026-03-26-variant-nodes-design.md  2026-03-27-rune-plugin-system-design.md  2026-03-28-left-panel-plugin-tab-design.md  2026-03-28-scripting-engine-design.md  2026-03-30-rust-wasm-plugin-invocation-design.md  2026-03-31-plugin-console-api-design.md  2026-04-03-llm-node-design.md  (+1 more)
plugins/hello-world/: Cargo.toml
public/scripts/: hello.rn
src/: app.rs  main.rs  tauri_invoke.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/scripts/: hello.rn
src-tauri/src/: config.rs  lib.rs  llm.rs  main.rs
src-tauri/src/plugins/: capabilities.rs  commands.rs  console.rs  errors.rs  host.rs  integration_test.rs  loader.rs  mod.rs  plugin.rs  registry.rs  rune_loader.rs  rust_loader.rs  wasm_loader.rs
src-tauri/src/scripts/: commands.rs  engine.rs  mod.rs
src/components/: app_layout.rs  canvas.rs  execution_engine.rs  execution_trace.rs  graph_section.rs  inspector.rs  inspector_panel.rs  left_panel.rs  mod.rs  modal.rs  node_inspector.rs  plugin_manager.rs  right_panel.rs  save_load.rs  script_editor.rs  toast.rs  undo.rs
src/gent-plugin/: Cargo.toml
(+10 files in other folders)
